--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>Modern Personal Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <div class="left-nav">
+            <img src="https://scrimbank.netlify.app/me.png" width="100px" height="auto" alt="my profile pic" />
+            <span class="twitter-span"><a href="https://twitter.com/run_vball_code">@run_vball_code</a></span>
+        </div>
+        <div class="right-nav">
+            <button>About</button>
+            <button>Work</button>
+            <button>Solutions</button>
+        </div>
+    </header>
+    <div class="tony-container">
+        <p>I'm Tony, and I turn ideas into digital experiences that people love.</p>
+        <div class="button-container">
+            <button class="start-project-button">Start a project</button>
+            <button class="up-arrow-button"></button>
+        </div>
+    </div>
+    <div class="description-container">
+        <p class="description-p">
+            Welcome, make yourself at home. I am a multidisciplinary web designer, designing and building beautiful digital products, for companies around the world.
+        </p>
+        <p class="description-p">
+            I believe that design should be both functional and aesthetically pleasing, and I am dedicated to delivering exceptional user experiences through thoughtful design and 
+            meticulous attention to detail.
+        </p>
+        <a href="">Download resume<button class="up-arrow-button"></button></a>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
